# sad-training

./: .gitignore  README.md  pyproject.toml
configs/calm/: default.json
configs/classification/: calm-flant-t5-base.json  flant-t5-base.json  tasks.json
configs/classification/scratch/: boolq.json  cb.json  default.json  iemocap.json  imdb.json  llama3.json  mistral.json  predict.json  wikiface.json
configs/clm/: default.json
configs/multimodal_classification/: alloy.json  early-fusion.json  late-fusion.json
configs/sad_training/: audio-only.json  early-fusion.json  late-fusion.json  tasks.json  text-only.json
configs/seq2seq/: boolq.json  cb.json  default.json  fb.json  iemocap.json  imdb.json
data/cb/: annotations.jsonl
data/cb_text_only/no_context/: dev.jsonl  last_sentence_converter.py  test.jsonl  train.jsonl
data/fantom/: .built
data/fb/: dev.csv  test.jsonl  train.csv
data/fb/original/: dev.jsonl  test.csv  train.jsonl
data/fb/span/: corpus.csv
data/osc/: .gitignore
data/prompts/: list-entities  summarize-cogstate  summarize-emotions
openai-tts/: openai_tts.ipynb  openai_tts.py
src/core/: context.py  evaluate.py  experiments.py  keychain.py
src/data/: commitment_bank.py  commitment_bank_text_only.py  commitment_bank_textonly.py  corpora.py  fact_bank.py  fantom.py  goemotions.py  head2span.py  iemocap.py  osc.py  prompts.py  super_glue.py  swbd_s.py  tasks.json  tasks.py  utils.py  validation.py  wikiface.py  wsj.py
src/models/: calm.py  multimodal_classifier.py
